Doc/0.1/09-data/07_scrollbox_ru.md
![RimUI Framework](../../../About/Preview.png)

**RimUI Framework** — ядро `0.7.1` · мод `0.1.0` · RimWorld `1.6`

---

[Оглавление](../index_ru.md) - Данные | Пред.: [TreeTable](06_treetable_ru.md) | След.: [Button](../10-overlays/01_button_ru.md) | [English](07_scrollbox_en.md)

---

# ScrollBox

Оборачивает один дочерний элемент вертикальным скроллом — пригождается, когда контент может не
влезть в отведённую высоту.

`RimUI.Elements.ScrollBox : UiElement`

## Пример

```csharp
var scroll = new ScrollBox(myTallContent) { Key = "myScroll" };
```

## Параметры

| Параметр | Тип | По умолчанию | Описание |
|---|---|---|---|
| `Child` | `UiElement` | `null` | Единственный контейнируемый элемент. |
| `ScrollbarWidth` | `float` | `10` | Ширина скроллбара. |
| `WheelStep` | `float` | `40` | Пикселей за один щелчок колеса мыши. |
| `TrackColor` | `ColorRGBA` | `(1,1,1,0.06)` | Цвет трека скроллбара. |
| `HandleColor` | `ColorRGBA` | `(1,1,1,0.25)` | Цвет ручки скроллбара. |
| `HandleActiveColor` | `ColorRGBA` | `(1,1,1,0.45)` | Цвет ручки при наведении/перетаскивании. |

## Стили

Базовые поля `Style` (`Background`/`Border`/`Shadow`/`Sprite`/`Padding`/`Margin`) — как у любого
элемента-контейнера.

## Методы

| Метод | Возвращает | Описание |
|---|---|---|
| `ScrollBox()` (конструктор) | — | Пустой контейнер — задать `Child` вручную. |
| `ScrollBox(UiElement child)` (конструктор) | — | Сразу с содержимым. |
| `SetStyle(string path, string value)` | `void` | Установить поле стиля строкой (`"background"`, `"radius"`...); именованных частей у `ScrollBox` нет — путь применяется к корневому `Style`. Неизвестный путь/значение — молча игнорируется. |

Колесо мыши работает при наведении и обрабатывается ПОСЛЕ детей — вложенный скролл получает
приоритет. Скроллбар — перетаскивание ручки (захват мыши) или клик по треку (прыжок к позиции).

**Точный порог появления скроллбара**: `Child.Desired.Height > доступная_высота + 0.5` (эпсилон
0.5px защищает от мерцания на границе точности float). `WheelStep = 40` — множитель к «сырому»
значению прокрутки колеса из движка (`Event.delta.y`), а не гарантированные ровно 40px на один
физический щелчок — на трекпадах/при плавной прокрутке дельта может быть дробной. **Важно**: это
значение относится ТОЛЬКО к `ScrollBox` — списки и таблицы (`ListBox`, `DataTable`, `Tree`,
`TreeTable`, `Select`, `MultiSelect`) не переиспользуют `ScrollBox` и используют собственные,
другие по величине множители (24–28), зашитые в их коде напрямую, а не через публичное поле.

## События

Собственных событий нет, но доступны универсальные события базового `UiElement` через `Events`
(`GetSelected`/`SetSelected` и `SelectionChanged` у `ScrollBox` нет — он не компонент выбора):

| Событие | Тип | Параметры | Когда вызывается |
|---|---|---|---|
| `Events.HoverEnter` / `Events.HoverLeave` | `UiEventHandler` | `data.MousePosition` | Курсор вошёл/покинул границы (по разу на переход). |
| `Events.Hover` | `UiEventHandler` | `data.MousePosition` | Курсор над элементом — КАЖДЫЙ КАДР (~60 раз/сек). Тяжёлый обработчик просадит FPS — только лёгкая логика, без аллокаций/поиска/IO. |
| `Events.Click` / `Events.RightClick` | `UiEventHandler` | `data.MousePosition` | ЛКМ / ПКМ по элементу. |
| `Events.Scroll` | `UiEventHandler` | `data.ScrollDelta` | Колесо мыши над элементом (отдельно от собственной прокрутки контента). |
| `Events.DisabledChanged` | `UiEventHandler` | `data.Disabled` | Изменилась эффективная активность (у `ScrollBox` своего `Disabled` нет). |

## Поддержка механик

| Механика | Поддержка | Пояснение |
|---|---|---|
| Стиль | Да | Фон/бордюр/тень/спрайт/отступы как у любого элемента. |
| Спрайт-рамка | Да | `Style.Sprite` — есть явная ветка отрисовки. |
| Анимация | Да | Общий механизм `Style.Animation`. |
| Disabled | Нет | Своего понятия «отключён» нет. |
| Hover-fade | Нет | Цвет ручки переключается жёстко (`dragging \|\| HoverOn(handle) ? HandleActiveColor : HandleColor`), без плавного перехода. |

Overlay-слои детей (меню/тултипы) не клипуются автоматически.


---

[Оглавление](../index_ru.md) - Данные | Пред.: [TreeTable](06_treetable_ru.md) | След.: [Button](../10-overlays/01_button_ru.md) | [English](07_scrollbox_en.md)

## Поддержать автора
Если тебе нравится RimUI Framework, можешь поддержать разработку:

[DonationAlerts](https://www.donationalerts.com/r/klimprog)
[Boosty](https://boosty.to/klimprog/donate)

**USDT (TRC20):** `TA4zq9F4TTrSQXjEESMBk8juQMGNLXX4B5`

Спасибо! ❤️
